# the-game-of-life

./: README.md  run  run.bat
src/: CMakeLists.txt  main.c
